--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -47,19 +47,19 @@
 .ocal_state {
     border: 1px solid #888;
 }
-.ocal_state[data-ocal_state="0"] {
+[data-ocal_state="0"] {
     background: white;
     color: black;
 }
-.ocal_state[data-ocal_state="1"] {
+[data-ocal_state="1"] {
     background: green;
     color: white;
 }
-.ocal_state[data-ocal_state="2"] {
+[data-ocal_state="2"] {
     background: yellow;
     color: black;
 }
-.ocal_state[data-ocal_state="3"] {
+[data-ocal_state="3"] {
     background: red;
     color: white;
 }
