--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -96,6 +96,17 @@
 .ocal_mode {}
 
 /*
+ * Pseudo buttons
+ */
+.ocal_button {
+    display: inline-block;
+    border: 1px solid #888;
+    padding: 0.1em 0.5em;
+    text-decoration: none;
+    /*cursor: pointer;*/
+}
+
+/*
  * Back-end
  */
 .ocal_logo {
