Close #10: Add more states
Instead of hard-coding the maximum state to 3, we make it configurable
and support an arbitrary amount of states. Users have to manually add
respective state labels and colors, though.

Also, we slightly change the logic of the list views to show entries
for all states except the zero state, regardless whether they are
labeled.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -47,19 +47,19 @@
 .ocal_state {
     border: 1px solid #888;
 }
-[data-ocal_state="0"] {
+*[data-ocal_state="0"] {
     background: white;
     color: black;
 }
-[data-ocal_state="1"] {
+*[data-ocal_state="1"] {
     background: green;
     color: white;
 }
-[data-ocal_state="2"] {
+*[data-ocal_state="2"] {
     background: yellow;
     color: black;
 }
-[data-ocal_state="3"] {
+*[data-ocal_state="3"] {
     background: red;
     color: white;
 }
